OldArchive/23660819322d8f42596729ca758dfa98-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:1:5: error: "0x00007ffff70fd7b8" is not a valid filename
 #0  0x00007ffff70fd7b8 in main_arena () from /lib/x86_64-linux-gnu/libc.so.6
     ^
main.cpp:2:5: error: "0x0000000000406670" is not a valid filename
 #1  0x0000000000406670 in Jellyot::GlId<void (*)(unsigned int)>::~GlId (this=0x863620, 
     ^
main.cpp:4:5: error: "0x00000000004070ca" is not a valid filename
 #2  0x00000000004070ca in Jellyot::Shader::~Shader (this=0x863620, __in_chrg=<optimised out>)
     ^
main.cpp:6:5: error: "0x00000000004070e4" is not a valid filename
 #3  0x00000000004070e4 in std::_Destroy<Jellyot::Shader> (__pointer=0x863620)
     ^
main.cpp:8:5: error: "0x0000000000406d5e" is not a valid filename
 #4  0x0000000000406d5e in std::_Destroy_aux<false>::__destroy<Jellyot::Shader*> (__first=0x863620, 
     ^
main.cpp:10:5: error: "0x0000000000406905" is not a valid filename
 #5  0x0000000000406905 in std::_Destroy<Jellyot::Shader*> (__first=0x863620, __last=0x863640)
     ^
main.cpp:12:5: error: "0x00000000004063bb" is not a valid filename
 #6  0x00000000004063bb in std::_Destroy<Jellyot::Shader*, Jellyot::Shader> (__first=0x863620, __last=0x863640)
     ^
main.cpp:14:5: error: "0x0000000000405ebf" is not a valid filename
 #7  0x0000000000405ebf in std::vector<Jellyot::Shader, std::allocator<Jellyot::Shader> >::~vector (
     ^
main.cpp:16:5: error: "0x00000000004059aa" is not a valid filename
 #8  0x00000000004059aa in init_draw_data () at /home/elliot/Programming/Jellyot/src/main.cpp:55
     ^
main.cpp:17:5: error: "0x0000000000405b90" is not a valid filename
 #9  0x0000000000405b90 in main () at /home/elliot/Programming/Jellyot/src/main.cpp:88
     ^
main.cpp:3:5: error: '__in_chrg' does not name a type
     __in_chrg=<optimised out>) at /home/elliot/Programming/Jellyot/include/GlId.hpp:31
     ^
